Added requirements.txt and updated code

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,19 @@ pinecone-client==6.0.0
 langchain-community
 lxml
 html2text
+langchain-core==0.3.65
+langchain-openai==0.3.23
+langchain-pinecone==0.2.8
+langchain-tests==0.3.20
+langchain-text-splitters==0.3.
+pydantic_core==2.33.2
+pydeck==0.9.1
+Pygments==2.19.1
+pytest==8.4.0
+pytest-asyncio==0.26.0
+pytest-benchmark==5.1.0
+pytest-codspeed==3.2.0
+pytest-recording==0.13.4
+pytest-socket==0.7.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
